actualizacion de pagina

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background: white;
         }
         header {
-            background: #004080;
+            background: #a5edf0;
             color: white;
             padding: 10px;
             display: flex;
@@ -67,7 +67,6 @@
     </footer>
     
     <script>
-        // Permite personalizar los datos del estudiante
         document.getElementById("carrera").innerText = "Ingeniería en Sistemas";
         document.getElementById("codigo").innerText = "202300123";
         document.getElementById("nombre").innerText = "Juan Pérez";
