--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         header {
             background: #a5edf0;
-            color: white;
+            color: black;
             padding: 10px;
             display: flex;
             align-items: center;
