actualizando codigo del estudiante

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     
     <script>
         document.getElementById("carrera").innerText = "Ingeniería en Sistemas";
-        document.getElementById("codigo").innerText = "202300123";
+        document.getElementById("codigo").innerText = "SMSS12345";
         document.getElementById("nombre").innerText = "Juan Pérez";
     </script>
 </body>
