--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         }
         header {
             background: #a5edf0;
+            background-color:white;
             color: black;
             padding: 10px;
             display: flex;
